# yt-dlp-studio

./: .gitguardian.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  conftest.py  launcher.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  bump-yt-dlp-engine.yml  codeql.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CODE_SIGNING.md  DEVELOPMENT.md  FUTURE_FEATURES.md  GETTING_STARTED.md  INSTALLATION_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md  UPDATE_SERVICE_NOTES.md
packaging/: build.spec  build_linux.spec  hook-yt_dlp.py  version_info.txt
requirements/: ci-tools.in  ci-tools.txt  lock.txt
scripts/: _gen_social_preview.py  check_imports.py  reorganize.ps1  sync_version.py
src/: __init__.py  app.py
src/backend/: __init__.py  config_manager.py  download_worker.py  format_handler.py  history_manager.py  playlist_fetcher.py  playlist_worker.py  progress_handler.py  queue_manager.py  subtitle_list_worker.py  update_checker.py  video_info_worker.py  yt_dlp_wrapper.py
src/models/: __init__.py  app_config.py  download_history.py  download_queue.py  download_task.py  video_info.py
src/resources/config/: default_config.json
src/resources/icons/: ICONS_README.txt
src/resources/styles/: stylesheet.qss
src/ui/: __init__.py  about_tab.py  bandwidth_widget.py  batch_input_dialog.py  download_tab.py  filter_dialog.py  history_tab.py  log_widget.py  main_window.py  playlist_dialog.py  progress_bar.py  queue_tab.py  settings_tab.py  subtitle_selection_dialog.py  theme.py  update_dialog.py  video_info_dialog.py  video_player_widget.py
src/utils/: __init__.py  bandwidth_monitor.py  constants.py  crash_handler.py  deno_installer.py  error_handler.py  file_helper.py  logger.py  notification_manager.py  playlist_detector.py  secret_scrub.py  translations.py  validators.py
tests/: README.md  __init__.py  test_bandwidth_monitor.py  test_config_manager.py  test_constants.py  test_crash_handler.py  test_deno_installer.py  test_download_queue.py  test_download_task.py  test_error_handler.py  test_file_helper.py  test_format_handler.py  test_history_manager.py  test_integration.py  test_log_scrubbing.py  test_models.py  test_playlist_detector.py  test_playlist_subtitle_picker.py  test_progress_handler.py  test_queue_manager.py  test_queue_tab.py  test_smoke.sh  test_translations.py  test_update_checker.py  test_validators.py  test_validators_extended.py  test_yt_dlp_wrapper.py
